<resources>
    <string name="app_name">RickAndMortyTesting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <string name="characters">Characters</string>

    <!--  Network Error strings  -->
    <string name="network_error_no_internet">There was a network error, please check your internet connection</string>
    <string name="network_error_login_failed">There was an error logging in, please try again</string>
    <string name="error_verify_otp">There was an error verifying OTP, please try again</string>
    <string name="network_error_no_items_found">Sorry. We could not find the requested data</string>
    <string name="network_error_request_not_completed">Sorry. We could not complete your request</string>
    <string name="status">Status:</string>
    <string name="species">Species:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="created_on">Create On:</string>
    <string name="episodes_count">Episodes Count:</string>
    <string name="location_type">Location Type:</string>
    <string name="location_dimension">Location Dimension:</string>
    <string name="residents">Residents:</string>
</resources>